--- a/css/pan.css
+++ b/css/pan.css
@@ -86,7 +86,7 @@ body{
 	right: 0;
 	left: 0;
 	margin:auto;
-	background: url('../images/p1_lantern.png') no-repeat center bottom;
+	background: url('../img/p1_lantern.png') no-repeat center bottom;
 	background-size: 100%;
 	width: 45vw;
 	height: 71.2vh;
@@ -310,7 +310,7 @@ body{
 	right: 0;
 	bottom: 0;
 	margin:auto;
-	background: url('../images/p2_2020.png') no-repeat center center;
+	background: url('../img/p2_2020.png') no-repeat center center;
 	background-size: 100%;
 	width: 27.59vw;
 	height: 6.24vh;
@@ -370,7 +370,7 @@ body{
 	position: absolute;
 	top:25.48vh;
 	right: 3.75vw;
-	background: url('../images/p3_couplet_first.png') no-repeat center center;
+	background: url('../img/p3_couplet_first.png') no-repeat center center;
 	background-size: 100%;
 	-webkit-animation: first 1s linear infinite alternate;
 	        animation: first 1s linear infinite alternate;
